--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>送信ありがとうございました｜GOD-CLEANER</title>
+  
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-10977342585"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'AW-10977342585');
+  </script>
+  
   <style>
     :root{
       --bg:#f7fafc;
@@ -106,7 +116,6 @@
       color:var(--muted);
       font-size:13px;
     }
-
     /* small screens */
     @media (max-width:420px){
       .card{padding:22px;border-radius:10px}
@@ -119,19 +128,15 @@
   <main class="card" role="main" aria-labelledby="thanks-title">
     <div class="check" aria-hidden="true">✓</div>
     <div class="logo" aria-hidden="true">GC</div>
-
     <h1 id="thanks-title">お問い合わせありがとうございました。</h1>
     <p class="lead">
       回答を受け付けました。内容を確認のうえ、通常24時間以内に担当者よりご連絡いたします。<br>
       今しばらくお待ちください。
     </p>
-
     <div class="btn-row">
       <a class="btn btn-primary" href="https://mindfitness.github.io/GCG-LP/" role="button">元のサイトへ戻る</a>
      
     </div>
-
-
   </main>
 </body>
 </html>
