--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="ja">
 <head>
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-6CXFVG0QWW"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-24YHVZH3LL"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-6CXFVG0QWW');
+  gtag('config', 'G-24YHVZH3LL');
 </script>
 </script>
   <meta charset="utf-8" />
