--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang="ja">
 <head>
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-24YHVZH3LL"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-3VFZ318GY2"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-24YHVZH3LL');
+  gtag('config', 'G-3VFZ318GY2');
+</script>
 </script>
 </script>
   <meta charset="utf-8" />
